--- a/Index.html.html
+++ b/Index.html.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//FR">
 <html>
 <head>
- <title>Page de Denis Cornaz</title>
+ <title>Page de Diane Alliaume</title>
   <META http-equiv="Content-Type" content="text/html; charset=iso-8859-1" lang="fr">
-<META HTTP-EQUIV="Reply-to" CONTENT="denis.cornaz@dauphine.fr">
+<META HTTP-EQUIV="Reply-to" CONTENT="diane.alliaume@dauphine.psl.eu">
 <!-- <link href="css/main.css" rel="stylesheet" type="text/css"> -->
 
 </head>
@@ -20,8 +20,8 @@
 <td  width="40">
 
 <td align="center">
-<!-- <img width="300" src="cornaz_denis.jpg"> -->
-<img height="250" src="deniscornaz4.jpg">
+<!-- <img width="300" src=".jpg"> -->
+<img height="250" src=".jpg">
 </td>
 
 
@@ -30,7 +30,7 @@
 </td>
 
 <td align="center"> 
-<h2><b> <font color="#0030AF">Diane</font></b> </h2> 
+<h2><b> <font color="#0030AF">Diane Alliaumme</font></b> </h2> 
 <i><h4>
 </h4>
 
@@ -62,15 +62,15 @@
 <td align="left" valign="top">
 
 <h3>Contact</h3>
-Denis Cornaz - LAMSADE <br>
+Diane Alliaume -  <br>
 Université Paris Dauphine<br>
 Place du Maréchal de Lattre de Tassigny<br>
 75775 Paris Cedex 16<br>
 France<br>
 <br>
-Bureau P409bis<br>
-tel. : +33 (0)1 44 05 41 83<br>
-email : <a href="mailto:denis.cornaz@dauphine.fr">denis.cornaz@lamsade.dauphine.fr</a><br> 
+<br>
+tel. : +33 (0)6 35 41 02 16<br>
+email : <a href="mailto:diane.alliaume@dauphine.psl.eu">diane.alliaume@dauphine.psl.eu</a><br> 
 
 </td>
 
@@ -89,3 +89,4 @@ Dernière mise à jour :
 
 </body>
 </html>
+
