--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 </td>
 
 <td align="center"> 
-<h2><b> <font color="#0030AF">Diane Alliaumme</font></b> </h2> 
+<h2><b> <font color="#0030AF">Diane Alliaume</font></b> </h2> 
 <i><h4>
 </h4>
 
@@ -89,3 +89,4 @@ Dernière mise à jour :
 
 </body>
 </html>
+
